--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -49,7 +49,9 @@ a:hover {
 .navbar-toggler i {
     font-size: 30px;
 }
-
+.nav-item:last-child {
+    margin: 0 20px;
+}
 .dropdown-menu {
     display: block;
     opacity: 0;
@@ -59,9 +61,10 @@ a:hover {
     border: none;
     color: #ffffff;
     background-color: #4267b2;
+    margin-top: 28px;
 }
 
-.dropdown:hover .dropdown-menu {
+.dropdown-menu.show {
     opacity: 1;
     visibility: visible;
     transform: translateY(0%);
@@ -69,14 +72,12 @@ a:hover {
 
 .dropdown-item:hover {
     color: #ffffff;
-    text-decoration: underline;
+    font-weight: 500;
     background-color: transparent;
 }
 
 .dropdown-item {
     color: #ffffff;
-    text-transform: uppercase;
-    background-color: transparent;
 }
 
 .dropdown-toggle::after {
@@ -92,6 +93,7 @@ a:hover {
     z-index: 0;
     cursor: pointer;
     text-align: center;
+    padding: 10px 20px !important;
 }
 
 .nav-link:hover {
@@ -113,7 +115,7 @@ a:hover {
     position: absolute;
     left: 0px;
     width: 100%;
-    height: 2px;
+    height: 1px;
     background: #FFF;
     content: "";
     opacity: 0;
@@ -124,6 +126,10 @@ a:hover {
 .nav-link:not(.active):hover:after {
     opacity: 1;
     transform: translateY(0px);
+}
+
+.nav-link i {
+    margin-left: 10px;
 }
 
 /*hide navbar*/
@@ -182,6 +188,97 @@ a:hover {
     }
 }
 
+.mega-menu {
+    background-color: #4267b2;
+    margin-top: 28px;
+    position: absolute;
+    padding: 50px;
+    border-radius: .25rem;
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+    color: white;
+    font-family: inherit;
+    width: 80%;
+    left: 10%;
+    transform: translateY(20%);
+    transition: all .5s;
+}
+
+
+.mega-menu.show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0%);
+}
+
+.mega-title {
+    color: #eee;
+    margin-top: 0px;
+    padding-left: 15px;
+    padding-bottom: 13px;
+    text-transform: uppercase;
+    padding-top: 15px;
+    background-color: #7a96ca;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.mega-menu ul li a {
+    line-height: 25px;
+    display: block;
+}
+
+.stander {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.stander li {
+    padding-left: 20px;
+}
+
+ul.stander li a {
+    padding: 3px 0px;
+    color: #fefefe;
+    text-decoration: none;
+}
+
+ul.stander li a:hover, ul.stander li a:visited {
+    color: #fefefe;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.mega-menu:before, .mega-menu:after {
+    display: table;
+    content: " ";
+}
+
+.mega-menu:after {
+    clear: both;
+}
+
+@media (max-width: 992px) {
+    .dropdown-menu {
+        display: none;
+        margin-top: 0;
+    }
+
+    .nav-link {
+        text-align: left;
+    }
+    .mega-menu{
+        display: none;
+        padding: 0;
+        width: 100%;
+        margin-top: 0;
+    }
+    .mega-menu.show{
+        position: static;
+    }
+}
 
 /*END Header*/
 /*Loading*/
@@ -1009,6 +1106,10 @@ fieldset .note {
 }
 
 .rotate.up {
+    transform: rotate(180deg);
+}
+
+.fa-caret-down.up {
     transform: rotate(180deg);
 }
 
