--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -60,7 +60,8 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" th:href="@{timetableClass}">Thời khóa biểu của lớp</a>
                             <a class="dropdown-item" th:href="@{timetableTeacher}">Thời khóa biểu của giáo viên</a>
-                            <a id="scheduleManagerMenu" class="dropdown-item" th:href="@{manageTimetable}">Quản lý thời khóa biểu</a>
+                            <a id="scheduleManagerMenu" class="dropdown-item" th:href="@{manageTimetable}">Quản lý thời
+                                khóa biểu</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -76,6 +77,7 @@
                     <li class="nav-item" id="adminMenu">
                         <a class="nav-link" href="#">QUẢN LÝ <i class="fa fa-caret-down"></i></a>
                         <div class="mega-menu">
+                            <span class="barex">×</span>
                             <div class="row">
                                 <div class="col-md-3 position-relative float-left">
                                     <h4 class="mega-title">Quản lý tài khoản</h4>
@@ -116,7 +118,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mt-4">
                                 <div class="col-md-3 position-relative float-left">
                                     <h4 class="mega-title">Quản lý năm học</h4>
                                     <ul class="stander">
