1. Update timetable class + teacher 2. Get value input date in manage Timetable

--- a/project/src/main/resources/templates/timetable/timetableTeacher.html
+++ b/project/src/main/resources/templates/timetable/timetableTeacher.html
@@ -27,19 +27,14 @@
         <div class="table-title">
             <h2>Thời khóa biểu của giáo viên</h2>
             <div class="search">
-                <div class="col-xl-4 d-inline-block">
+                <div class="col-xl-5 d-inline-block">
                     <div class="search-line">
-                        <span>Năm học</span>
-                        <select class="combobox searchable" id="year" onchange="changeSelected()">
-                        </select>
-                    </div>
-                    <div class="search-line combo-box-week">
-                        <span>Tuần</span>
-                        <select class="combobox searchable" id="week">
+                        <span>Ngày áp dụng</span>
+                        <select class="combobox searchable" id="appyDateList">
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-1 d-inline-block"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Giáo viên</span>
