--- a/project/src/main/resources/templates/timetable/manageTimetable.html
+++ b/project/src/main/resources/templates/timetable/manageTimetable.html
@@ -33,10 +33,7 @@
                             <label for="date-input" class="col-4 col-form-label">Ngày áp dụng <span
                                     class="text-red">*</span></label>
                             <div class="col-8">
-                                <select class="form-control" id="date-input">
-                                    <option th:each="week : ${listWeek}"><span th:text="${week.fromDate}"></span>
-                                    </option>
-                                </select>
+                                <input type="date" id="date-input" class="form-control" th:name="file">
                             </div>
                         </div>
                         <div class="form-group text-left">
@@ -45,8 +42,11 @@
                                    aria-describedby="fileHelp">
                             <small id="fileHelp" class="form-text text-muted">Hỗ trợ định dạng XLSX, XLS.</small>
                         </div>
-                        <div class="error input-err text-left"><span th:text="${message}"></span></div>
-                        <input th:type="submit" class="btn btn-customer" value="THAY ĐỔI THỜI KHÓA BIỂU" data-toggle="modal" data-target="#overrideTimetableModal"/>
+                        <div class="error input-err text-left">
+<!--                            <span th:text="${message}"></span>-->
+                        </div>
+                        <!--                        <input th:type="submit" class="btn btn-customer" value="THAY ĐỔI THỜI KHÓA BIỂU" data-toggle="modal" data-target="#overrideTimetableModal"/>-->
+                        <input th:type="submit" class="btn btn-customer" value="THAY ĐỔI THỜI KHÓA BIỂU"/>
                     </form>
                 </fieldset>
             </div>
@@ -82,7 +82,7 @@
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3 img-success" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
                 <img class="mb-3 mt-3 img-fail hide" src="https://img.icons8.com/flat_round/100/000000/error--v1.png"/>
-<!--                <h5 id="message-delete">Thay đổi Thời khóa biểu thành công!</h5>-->
+                <!--                <h5 id="message-delete">Thay đổi Thời khóa biểu thành công!</h5>-->
                 <h5 id="message-delete">Ghi đè Thời khóa biểu thành công!</h5>
             </div>
             <div class="modal-footer">
@@ -94,5 +94,5 @@
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
 </body>
-<script type="text/javascript" th:src="@{/js/manageTimetable.js}"></script>
+<script type="text/javascript" th:src="@{/js/timetable/manageTimetable.js}"></script>
 </html>
