--- a/project/src/main/resources/templates/manageAccount/userInformation.html
+++ b/project/src/main/resources/templates/manageAccount/userInformation.html
@@ -35,15 +35,15 @@
                         <label for="roleName">Chức vụ <span class="text-red">*</span></label>
                         <input type="text" class="form-control" id="roleName" value="" disabled>
                     </div>
-                    <div class="form-group text-left">
+                    <div class="form-group text-left" id="fullNameDiv">
                         <label for="fullName">Họ và tên</label>
                         <input type="text" class="form-control" id="fullName" value="" disabled>
                     </div>
-                    <div class="form-group text-left">
+                    <div class="form-group text-left" id="phoneDiv">
                         <label for="phone">SĐT</label>
                         <input type="text" class="form-control" id="phone" value="" disabled>
                     </div>
-                    <div class="form-group text-left">
+                    <div class="form-group text-left" id="emailDiv">
                         <label for="email">Email</label>
                         <input type="text" class="form-control" id="email" value="" disabled>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="error userInfo-err text-left"></div>
                     <div class="form-group ">
                         <input type="button" class="btn btn-customer" id="editInfo" data-toggle="modal"
-                                data-target="" value="CHỈNH SỬA"/>
+                               data-target="" value="CHỈNH SỬA"/>
                     </div>
                 </fieldset>
             </form>
