--- a/project/src/main/resources/templates/timetable/manageTimetable.html
+++ b/project/src/main/resources/templates/timetable/manageTimetable.html
@@ -33,7 +33,7 @@
                             <label for="date-input" class="col-4 col-form-label">Ngày áp dụng <span
                                     class="text-red">*</span></label>
                             <div class="col-8">
-                                <input type="date" id="date-input" class="form-control" th:name="file">
+                                <input type="date" id="date-input" class="form-control" th:name="date">
                             </div>
                         </div>
                         <div class="form-group text-left">
