Create template: 1. viewRequest 2. history

--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -64,6 +64,8 @@
     <div><a th:href="@{gradingToEmulation}">Chấm điểm thi đua</a></div>
     <div><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></div>
     <div><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></div>
+    <div><a th:href="@{viewRequest}">Xem yêu cầu tạo mới</a></div>
+    <div><a th:href="@{history}">Xem lịch sử</a></div>
     <br>
     <h2>Module 8: Quản lý thời gian</h2>
     <div><a th:href="@{manageViolationEnteringTime}">Xem thời gian thực thi chấm điểm</a></div>
