--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -832,12 +832,12 @@ fieldset .note {
 
 /*headings*/
 .fs-title {
-    font-size: 18px;
+    font-size: 25px;
     text-transform: uppercase;
     color: #2C3E50;
     margin-bottom: 10px;
-    letter-spacing: 2px;
-    font-weight: bold;
+    /*letter-spacing: 2px;*/
+    font-weight: 500;
 }
 
 .fs-subtitle {
