Fix bug template 13/07/2020

--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -32,7 +32,6 @@
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Ngày</span>
-<!--                        <input type="date" id="fromDate" class="searchable">-->
                         <select class="combobox searchable" id="fromDate">
                             <option value="0" selected="selected">06/07/2020</option>
                             <option value="1">13/07/2020</option>
@@ -86,8 +85,8 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
-            <thead class="text-center">
+        <table class="table table-bordered text-center">
+            <thead class="thead-light">
             <tr>
                 <th style="width: 50%">Lớp</th>
                 <th>Sao đỏ trực tuần</th>
