--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -152,7 +152,7 @@
                                         <li><a th:href="@{gradingToEmulation}">Chấm điểm thi đua</a></li>
                                         <li><a th:href="@{violationListOfClass}">Xem danh sách lỗi theo ngày</a></li>
                                         <li><a th:href="@{addNewViolation}">Thêm vi phạm mới</a></li>
-                                        <li><a th:href="@{viewRequest}">Xem yêu cầu tạo mới</a></li>
+                                        <li><a th:href="@{viewRequest}">Xem yêu cầu thay đổi</a></li>
                                         <li><a th:href="@{history}">Xem lịch sử</a></li>
                                     </ul>
                                 </div>
