--- a/project/src/main/resources/templates/manageAccount/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount/manageAccount.html
@@ -72,20 +72,20 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
-            <thead>
+        <table class="table table-bordered">
+            <thead class="thead-light text-center">
             <tr class="align-items-center">
-                <th>
+                <th style="width: 6%">
                     <span class="custom-checkbox">
                         <input type="checkbox" id="selectAll">
                         <label for="selectAll"></label>
                     </span>
                 </th>
-                <th>Tên đăng nhập</th>
-                <th>Họ và tên</th>
-                <th>Chức vụ</th>
-                <th>Lớp</th>
-                <th>SĐT</th>
+                <th style="width: 15%">Tên đăng nhập</th>
+                <th style="width: 20%">Họ và tên</th>
+                <th style="width: 20%">Chức vụ</th>
+                <th style="width: 10%">Lớp</th>
+                <th style="width: 10%">SĐT</th>
                 <th>Email</th>
             </tr>
             </thead>
