--- a/project/src/main/resources/templates/manageClass/manageClass.html
+++ b/project/src/main/resources/templates/manageClass/manageClass.html
@@ -16,7 +16,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
-
+    <!--Table-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -86,8 +89,8 @@
                 <span class="status-deactive"><i class="fa fa-circle" aria-hidden="true"></i></span> Khóa
             </div>
         </div>
-        <table class="table table-hover">
-            <thead>
+        <table class="table table-hover table-bordered text-center">
+            <thead class="thead-light">
             <tr class="align-items-center">
                 <th>STT</th>
                 <th>Khối</th>
