--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -33,14 +33,13 @@
                         <select class="combobox searchable" id="classList">
                         </select>
                     </div>
+                </div>
+                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-4 d-inline-block">
                     <div class="search-line" id="datetime">
                         <span>Ngày</span>
                         <input type="date">
                     </div>
-                </div>
-                <div class="col-xl-6 d-inline-block"></div>
-                <div class="d-inline-block ml-2">
-                    <button class="btn btn-search" id="search">Tìm kiếm</button>
                 </div>
             </div>
         </div>
