--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -7,14 +7,19 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-
+    <!--Select2-->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <!--Table-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/popper.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 
@@ -40,17 +45,9 @@
                 <div class="col-xl-2 d-inline-block"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
-                        <span>Sắp xếp theo</span>
-                        <select class="combobox searchable" id="orderBY">
-                            <option value="0" selected="selected">Lớp</option>
-                            <option value="1">Xếp hạng</option>
-                        </select>
-                    </div>
-                    <div class="search-line">
-                        <span>Thứ tự</span>
-                        <select class="combobox searchable" id="sortBy">
-                            <option value="0">Giảm dần</option>
-                            <option value="1" selected="selected">Tăng dần</option>
+                        <span>Lớp</span>
+                        <select class="combobox searchable" id="byClass">
+                            <option value="0" selected="selected">Tất cả</option>
                         </select>
                     </div>
                 </div>
@@ -70,8 +67,8 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover table-edit">
-            <thead>
+        <table class="table table-bordered table-edit mt-3">
+            <thead class="thead-light">
             <tr class="align-items-center">
                 <th>Lớp</th>
                 <th>Điểm nề nếp</th>
