--- a/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
+++ b/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
@@ -13,8 +13,7 @@
     <script th:src="@{/js/popper.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
 
@@ -36,10 +35,10 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover">
-            <thead>
+        <table class="table table-bordered mt-3">
+            <thead class="thead-light">
             <tr class="align-items-center">
-                <th>
+                <th style="width: 6%">
                     <span class="custom-checkbox">
                         <input type="checkbox" id="selectAll">
                         <label for="selectAll"></label>
