--- a/project/src/main/resources/templates/schoolYear/schoolYearList.html
+++ b/project/src/main/resources/templates/schoolYear/schoolYearList.html
@@ -7,11 +7,6 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-    <!--    &lt;!&ndash;DataTable&ndash;&gt;-->
-    <!--    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>-->
-    <!--    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>-->
-    <!--    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">-->
-    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">-->
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/popper.min.js}"></script>
@@ -37,8 +32,8 @@
                 </a>
             </div>
         </div>
-        <table class="table table-hover" id="tableSchoolYear">
-            <thead>
+        <table class="table table-bordered text-center" id="tableSchoolYear">
+            <thead class="thead-light">
             <tr class="align-items-center">
                 <th>STT</th>
                 <th>Tên năm học</th>
@@ -63,7 +58,7 @@
             </div>
             <div class="modal-footer">
                 <input type="submit" class="btn btn-danger" data-toggle="modal"
-                       id="btnDelete" data-target="#deleteSuccess" data-dismiss="modal" value="CÓ">
+                       id="btnDeleteModal" data-target="#deleteSuccess" data-dismiss="modal" value="CÓ">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="KHÔNG">
             </div>
         </div>
